# lcp-sim

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  index.css  index.html  package.json  svelte.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: deployment.yml  format.yml  rust.yml  tauri-publish.yml  tauri-test.yml  tauri-upload-artifacts.yml  vitest.yml
chem-eq/: Cargo.toml
chem-eq/examples/: cli.rs
chem-eq/src/: lib.rs  parse.rs
chem-eq/src/parse/: mod.rs  tests.rs
crates/chatelier/: Cargo.toml
crates/chatelier/examples/: repl.rs
crates/chatelier/src/: lib.rs
crates/chem-eq/: Cargo.toml  README.md
crates/chem-eq/examples/: balance.rs
crates/chem-eq/src/: balance.rs  compound.rs  display.rs  element.rs  equation.rs  error.rs  lib.rs
crates/chem-eq/src/parse/: mod.rs  tests.rs  util.rs
src/: app.css  components.rs  error.rs  main.rs  reaction.rs  ui.rs
src-tauri/: Cargo.toml  main.wxs  tauri.conf.json
src-tauri/crates/chatelier/: Cargo.toml  README.md  example.py
src-tauri/crates/chatelier/examples/: continuous.rs  repl.rs  serde.rs
src-tauri/crates/chatelier/src/: continuous.rs  lib.rs  simple.rs
src-tauri/crates/chem-eq/: Cargo.toml  LICENSE  README.md
src-tauri/crates/chem-eq/examples/: balance.rs
src-tauri/crates/chem-eq/src/: balance.rs  compound.rs  element.rs  equation.rs  error.rs  lib.rs
src-tauri/crates/chem-eq/src/parse/: mod.rs  tests.rs  util.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Chart.svelte  DiagramChart.svelte  DiagramQuestion.svelte  Explain.svelte  Interactive.svelte  Padded.svelte  Popup.svelte  Question.svelte  data.ts  diagramData.ts  question.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/learn-more/: +page.svelte
src/routes/quiz/: +page.svelte
src/routes/quiz/[slug]/: +page.js  +page.js.map  +page.svelte  +page.ts
src/routes/sandbox/: +page.svelte
src/ui/: eq_edit.rs  graph.rs  help.rs  menu.rs  mod.rs
static/: splashscreen.html
