[package]
name = "lcp-sim"
version = "0.1.0"
edition = "2021"
description = "Simulate Le Chatelier's Principle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["crates/chem-eq"]

[features]
default = []
dynamic = ["bevy/dynamic"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.0", features = ["jpeg"] }
bevy_egui = "0.17.1"
chem-eq = { version = "0.2.0", path = "crates/chem-eq" }
rand = "0.8.5"
