[package]
name = "app"
version = "0.1.0"
description = "Simulate Le Chatelier's Principle"
authors = ["beaconbrigade@gmail.com"]
license = ""
repository = "https://github.com/beaconbrigade/lcp-sim.git"
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["crates/chem-eq", "crates/chatelier"]

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }
chatelier = { version = "0.1.0", path = "crates/chatelier", features = ["serde"] }
chem-eq = { version = "0.3.0", path = "crates/chem-eq", features = ["serde"] }
thiserror = "1.0.39"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
