[package]
name = "chatelier"
version = "0.1.0"
edition = "2021"
description = "Simulate Le Chatelier's Principle"
documentation = "https://docs.rs/chetelier"
homepage = "https://github.com/BeaconBrigade/lcp-sim/tree/master/crates/chatelier"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "repl"
path = "examples/repl.rs"

[features]
default = []
bevy = ["chem-eq/bevy", "dep:bevy", "dep:bevy-inspector-egui"]

[dependencies]
chem-eq = { version = "0.2.0", path = "../chem-eq" }
bevy-inspector-egui = { version = "0.14.0", optional = true }
bevy = { version = "0.9.1", optional = true }
float-cmp = "0.9.0"
thiserror = "1.0.38"

[dev-dependencies]
once_cell = "1.16.0"
reedline-repl-rs = "1.0.2"
