[package]
name = "chem-eq"
version = "0.1.0"
edition = "2021"
description = "Parse chemical equations and balance, get mol ratios, or elide states on them"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
itertools = { version = "0.10.5", optional = true }
ndarray = { version = "0.15.6", optional = true }
num = { version = "0.4.0", optional = true }

[features]
default = ["balance"]
balance = ["dep:ndarray", "dep:num", "dep:itertools"]
