[package]
name = "chem-eq"
version = "0.2.0"
edition = "2021"
description = "Parse chemical equations and balance, get mol ratios and use ΔH"
documentation = "https://docs.rs/chem-eq"
homepage = "https://github.com/BeaconBrigade/lcp-sim/tree/master/crates/chem-eq"
license = "GPL-3.0-only"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "parse"

[[example]]
name = "balance"
required-features = ["balance"]

[features]
default = ["balance"]
balance = ["dep:ndarray", "dep:num"]
bevy = ["dep:bevy", "dep:bevy-inspector-egui"]

[dependencies]
nom = "7.1.1"
itertools = "0.10.5"
ndarray = { version = "0.15.6", optional = true }
num = { version = "0.4.0", optional = true }
thiserror = "1.0.37"
mendeleev = "0.5.0"
bevy-inspector-egui = { version = "0.14.0", optional = true }
bevy = { version = "0.9.1", optional = true }
