[package]
name = "chatelier"
version = "0.1.0"
edition = "2021"
description = "Simulate Le Chatelier's Principle"
documentation = "https://docs.rs/chetelier"
homepage = "https://github.com/BeaconBrigade/lcp-sim/tree/master/src-tauri/crates/chatelier"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "repl"
path = "examples/repl.rs"

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["serde"]

[features]
default = []
serde = ["dep:serde", "chem-eq/serde"]

[dependencies]
chem-eq = "0.3.1"
float-cmp = "0.9.0"
thiserror = "1.0.40"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
once_cell = "1.17.1"
reedline-repl-rs = "1.0.4"
serde_json = "1.0.96"
