[package]
name = "chem-eq"
version = "0.3.2"
edition = "2021"
description = "Parse chemical equations and balance, get mol ratios and use ΔH"
documentation = "https://docs.rs/chem-eq"
homepage = "https://github.com/BeaconBrigade/lcp-sim/tree/master/src-tauri/crates/chem-eq"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "parse"

[[example]]
name = "balance"
required-features = ["balance"]

[features]
default = ["balance"]
balance = ["dep:ndarray", "dep:num"]
serde = ["dep:serde", "ndarray?/serde", "num?/serde"] 

[dependencies]
nom = "7.1.3"
itertools = "0.10.5"
ndarray = { version = "0.15.6", optional = true }
num = { version = "0.4.0", optional = true }
thiserror = "1.0.40"
mendeleev = "0.8.0"
serde = { version = "1.0", features = ["derive"], optional = true }
